# stocky-trade-backend

./: .env.example  README.md  alembic.ini  docker-compose.yml  main.py  nifty200.csv  nifty200_master.csv  nsecash.csv  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 202606170001_initial_schema.py  202606170002_definedge_phase1_utilities.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: account.py  auth.py  bot.py  broker.py  live_orders.py  market.py  orders.py  paper_orders.py  positions.py
app/broker/: definedge_client.py  definedge_websocket.py  master_file_service.py
app/core/: config.py  security.py
app/database/: base.py  session.py
app/models/: base.py  bot_session.py  broker_credential.py  broker_session.py  instrument.py  order.py  paper_order.py  paper_position.py  position.py  trade.py  trade_log.py  user.py
app/schemas/: account.py  auth.py  bot.py  broker.py  common.py  market.py  order.py  position.py
app/services/: account_service.py  auth_service.py  bot_service.py  broker_service.py  market_service.py  paper_trade_service.py  risk_service.py
app/utilities/: encryption.py  response.py
