[project]
name = "intraday-trading-backend"
version = "0.1.0"
description = "Phase 1 FastAPI backend for paper intraday trading"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.3",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.137.1",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]
